--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "fetch": "^1.1.0",
     "http-errors": "~1.6.3",
